[tool.poetry]
name = "narcos-api"
version = "0.1.0"
description = ""
authors = ["Pery Lemke <pery.lemke@gmail.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
pydantic = "^1.8.2"
motor = "^2.5.1"
pymongo = "^3.12.1"
dynaconf = "^3.1.7"
python-decouple = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
